--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "webpack --watch --mode=development"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,5 @@
   "dependencies": {
     "webpack": "^4.46.0",
     "webpack-cli": "^4.5.0"
-  },
-  "type": "module"
+  }
 }
